k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: demo
  labels:
    app: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:13
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: demo
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
