k8s/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: demo
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /page1
            pathType: Prefix
            backend:
              service:
                name: demo-service
                namespace: demo
                port:
                  number: 80
          - path: /page2
            pathType: Prefix
            backend:
              service:
                name: demo-service
                namespace: demo
                port:
                  number: 80
