k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: ghcr.io/pratchayakc/demo-devsecops:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true  # เพื่อป้องกันไม่ให้ผู้ใช้สามารถเขียนข้อมูลลงใน root filesystem
      securityContext:
        fsGroup: 2000  # ตั้งค่า fsGroup เพื่อให้การเข้าถึงไฟล์ระบบที่ปลอดภัยยิ่งขึ้น

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-demo-app-to-access-db
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: demo-db  # จำกัดให้ demo-app สามารถเข้าถึง db ได้เท่านั้น
      ports:
        - protocol: TCP
          port: 3306  # พอร์ตของฐานข้อมูล
